[package]
name = "bevy_rhythm"
version = "0.1.0"
authors = ["Johann Barnard <johann.b@telus.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.4"
serde = "1.0.124"
serde_derive = "1.0.124"
toml = "0.5.8"
